Updates from ShareLaTeX

--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -1,11 +1,16 @@
 % !TeX root = proposal.tex
 \chapter{Motivation}\label{motivation}\label{chapter:Motivation}
 
-% Introduction of Definition of IoT
-Every passing day, our electronic device is getting smarter. It is no longer surprising that our refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our car trying to go back home from work. Under the moniker of `Internet of Things` (IoT), smart connected devices are revolutionizing our everyday life. These smart devices ranging from personal devices~\cite{bahirat_exploring_2018,he_data_nodate} (e.g., fitness trackers, smart speakers, smart home appliances) to devices deployed in public areas and ``smart cities'' (e.g., smart billboards, RFID trackers, CCTV cameras)~\cite{bahirat2018data,lee_privacy_2017,pappachan_towards_2017}, are intended to collect information directly related to the users, such as fitness/healthy information, or the environment of users, such as users' home. A main feature of these smart devices, is that they are connected to a larger network of devices via local communication protocols and/or the Internet to create powerful new applications that supports our day-to-day activities. 
+During the last two decades, the computing world is experiencing the third wave of computing revolution, which is similar to the "Cambrian explosion" about 540 million years ago, where a sudden and major diversification of organisms, with a vast number of species suddenly appearing on our plant. Computers has evolved from large black box that equipped with a monitor, keyboard and mouse, to smartphones, tablets, smart watches, fitness trackers, smart agents, and so on.
+
+The Internet of Things (IoT) is an outstanding representative of the third wave of computing. The first wave focused on computation, making the basics of computing work. The second wave centered on networking, connecting all of these computers together in a global network. The third wave, of which we are in the early stags, looks at making computers part of the physical world which we are living in. Computation and communication are being embedded into our everyday electronic devices. These computers can use all kinds of sensors, such as cameras, microphones, GPS, accelerometers, and more, to perceive the physical world. More over, these computers are getting smarter every passing day --- they can now even interact with our day-to-day activities. It is no longer surprising that our refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our car trying to go back home from work. These smart connected devices are revolutionizing our everyday life. 
+
+%These smart devices ranging from personal devices~\cite{bahirat_exploring_2018,he_data_nodate} (e.g., fitness trackers, smart speakers, smart home appliances) to devices deployed in public areas and ``smart cities'' (e.g., smart billboards, RFID trackers, CCTV cameras)~\cite{bahirat2018data,lee_privacy_2017,pappachan_towards_2017}, are intended to collect information directly related to the users, such as fitness/healthy information, or the environment of users, such as users' home. A main feature of these smart devices, is that they are connected to a larger network of devices via local communication protocols and/or the Internet to create powerful new applications that supports our day-to-day activities. 
 
 % The increasing appearance and impact of IoT devices
-IoT is not a new word to normal users nowadays. Samsung's smart-things, Phillips' Hue smart lighting, Google's Nest smart learning thermostat, and ADT smart home security, Smart watches and fitness trackers, such as the Apple, Android and Pebble watches, Fitbit, Garmin, Jawbone, and Misfit bands, are helping us record our steps, heartbeats, and calories burnt. IoT has already established a huge impact in our everyday lives. As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, a total number of 21 billion IoT devices will be in use by 2020. This means that IoT devices are about to dethrone smartphones as the largest category of connected devices by then.
+As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, a total number of 21 billion IoT devices will be in use by 2020. This means that IoT devices are about to dethrone smartphones as the largest category of connected devices by then. Cisco predicts the global Internet of Things market will be
+\$14.4 trillion by 2022.
+IoT is not a new word to normal users nowadays. Samsung's smart-things, Phillips' Hue smart lighting, Google's Nest smart learning thermostat, and ADT smart home security, Smart watches and fitness trackers, such as the Apple, Android and Pebble watches, Fitbit, Garmin, Jawbone, and Misfit bands, are helping us record our steps, heartbeats, and calories burnt. IoT has already established a huge impact in our everyday lives. 
 
 % The rapid acceleration brings both opportunity and problems
 The rapid accelerating of the IoT brings a wealth of opportunity as well as risks. However, a lot of research has been focusing on the data and technology needs of the IoT -- the sensors, data, and the storage, security, and analysis of the data. However, research to an important aspect of IoT adoption and usage--the humans interacting with those technologies, are lacking. The demand for reducing the complexity and the burden in controlling these devices is urgent. Hence, my dissertation proposal research focuses on simplifying the task of controlling IoT devices for users using a data-driven design. People is bad at making decisions. This is also true in IoT privacy-setting domain [\textbf{need reference}]. To solve this problem, I use statistical analysis and machine learning to analyze how IoT device users make decisions regarding the privacy settings of their devices. Based on the insights gained from this analysis, I design intelligent User Interfaces to reduce the complexity of the privacy-setting user interface.
