--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -1,21 +1,302 @@
-@inproceedings{bahirat_exploring_2018,
-	address = {Baltimore, MD},
-	title = {Exploring {Defaults} and {Framing} effects on {Privacy} {Decision} {Making} in {Smarthomes}},
-	booktitle = {{USENIX} symposium on {Usable} {Privacy} and {Security}},
-	author = {Bahirat, Paritosh and He, Yangyang and Knijnenburg, Bart P.},
+
+@inproceedings{worthy_trust_2016,
+	address = {New York, NY, USA},
+	series = {{DIS} '16},
+	title = {Trust {Me}: {Doubts} and {Concerns} {Living} with the {Internet} of {Things}},
+	isbn = {978-1-4503-4031-1},
+	shorttitle = {Trust {Me}},
+	url = {http://doi.acm.org/10.1145/2901790.2901890},
+	doi = {10.1145/2901790.2901890},
+	abstract = {An increasing number of everyday objects are now connected to the internet, collecting and sharing information about us: the "Internet of Things" (IoT). However, as the number of "social" objects increases, human concerns arising from this connected world are starting to become apparent. This paper presents the results of a preliminary qualitative study in which five participants lived with an ambiguous IoT device that collected and shared data about their activities at home for a week. In analyzing this data, we identify the nature of human and socio-technical concerns that arise when living with IoT technologies. Trust is identified as a critical factor - as trust in the entity/ies that are able to use their collected information decreases, users are likely to demand greater control over information collection. Addressing these concerns may support greater engagement of users with IoT technology. The paper concludes with a discussion of how IoT systems might be designed to better foster trust with their owners.},
+	urldate = {2018-08-21},
+	booktitle = {Proceedings of the 2016 {ACM} {Conference} on {Designing} {Interactive} {Systems}},
+	publisher = {ACM},
+	author = {Worthy, Peter and Matthews, Ben and Viller, Stephen},
+	year = {2016},
+	keywords = {data, human centered design, internet of things, privacy, trust},
+	pages = {427--434},
+	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\PLRCH7NZ\\Worthy et al. - 2016 - Trust Me Doubts and Concerns Living with the Inte.pdf:application/pdf}
+}
+
+@inproceedings{davies_privacy_2016,
+	address = {New York, NY, USA},
+	series = {{HotMobile} '16},
+	title = {Privacy {Mediators}: {Helping} {IoT} {Cross} the {Chasm}},
+	isbn = {978-1-4503-4145-5},
+	shorttitle = {Privacy {Mediators}},
+	url = {http://doi.acm.org/10.1145/2873587.2873600},
+	doi = {10.1145/2873587.2873600},
+	abstract = {Unease over data privacy will retard consumer acceptance of IoT deployments. The primary source of discomfort is a lack of user control over raw data that is streamed directly from sensors to the cloud. This is a direct consequence of the over-centralization of today's cloud-based IoT hub designs. We propose a solution that interposes a locally-controlled software component called a privacy mediator on every raw sensor stream. Each mediator is in the same administrative domain as the sensors whose data is being collected, and dynamically enforces the current privacy policies of the owners of the sensors or mobile users within the domain. This solution necessitates a logical point of presence for mediators within the administrative boundaries of each organization. Such points of presence are provided by cloudlets, which are small locally-administered data centers at the edge of the Internet that can support code mobility. The use of cloudlet-based mediators aligns well with natural personal and organizational boundaries of trust and responsibility.},
+	urldate = {2018-04-24},
+	booktitle = {Proceedings of the 17th {International} {Workshop} on {Mobile} {Computing} {Systems} and {Applications}},
+	publisher = {ACM},
+	author = {Davies, Nigel and Taft, Nina and Satyanarayanan, Mahadev and Clinch, Sarah and Amos, Brandon},
+	year = {2016},
+	keywords = {privacy, trust, iot, augmented cognition, cloudlets, privacy control, privacy mediators},
+	pages = {39--44},
+	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\NMI5CYJC\\Davies et al. - 2016 - Privacy Mediators Helping IoT Cross the Chasm.pdf:application/pdf}
+}
+
+@inproceedings{loi_systematically_2017,
+	address = {New York, NY, USA},
+	series = {{IoTS}\&{P} '17},
+	title = {Systematically {Evaluating} {Security} and {Privacy} for {Consumer} {IoT} {Devices}},
+	isbn = {978-1-4503-5396-0},
+	url = {http://doi.acm.org/10.1145/3139937.3139938},
+	doi = {10.1145/3139937.3139938},
+	abstract = {Internet-of-Things (IoT) devices such as smart bulbs, cameras, and health monitors are being enthusiastically adopted by consumers, with numbers projected to rise to the billions. However, such devices are also easily attacked, or used for launching attacks, at large scale and at increasing frequency. This paper is an attempt at developing a systematic method to identify the security and privacy shortcomings of various IoT devices, with a view towards alerting consumers, manufacturers, and regulators to the associated risks. We categorize the threats along four dimensions: confidentiality of private data sent to/from the IoT device; integrity of data from the IoT device to internal/external entities; access control of the IoT device; and reflective attacks that can be launched from an IoT device. We develop scripts to automate the security testing along each of these dimensions, subject twenty market-ready consumer IoT devices to our test suite, and reveal findings that give a fairly comprehensive picture of the security/privacy posture of these devices. Our methodology can be used as a basis for a star-based security ratings system for IoT devices being brought to market.},
+	urldate = {2018-04-24},
+	booktitle = {Proceedings of the 2017 {Workshop} on {Internet} of {Things} {Security} and {Privacy}},
+	publisher = {ACM},
+	author = {Loi, Franco and Sivanathan, Arunan and Gharakheili, Hassan Habibi and Radford, Adam and Sivaraman, Vijay},
+	year = {2017},
+	keywords = {privacy, iot, security},
+	pages = {1--6},
+	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\FE9CH7GM\\Loi et al. - 2017 - Systematically Evaluating Security and Privacy for.pdf:application/pdf}
+}
+
+@inproceedings{perera_privacy-by-design_2016,
+	address = {New York, NY, USA},
+	series = {{IoT}'16},
+	title = {Privacy-by-{Design} {Framework} for {Assessing} {Internet} of {Things} {Applications} and {Platforms}},
+	isbn = {978-1-4503-4814-0},
+	url = {http://doi.acm.org/10.1145/2991561.2991566},
+	doi = {10.1145/2991561.2991566},
+	abstract = {The Internet of Things (IoT) systems are designed and developed either as standalone applications from the ground-up or with the help of IoT middleware platforms. They are designed to support different kinds of scenarios, such as smart homes and smart cities. Thus far, privacy concerns have not been explicitly considered by IoT applications and middleware platforms. This is partly due to the lack of systematic methods for designing privacy that can guide the software development process in IoT. In this paper, we propose a set of guidelines, a privacy by-design framework, that can be used to assess privacy capabilities and gaps of existing IoT applications as well as middleware platforms. We have evaluated two open source IoT middleware platforms, namely OpenIoT and Eclipse SmartHome, to demonstrate how our framework can be used in this way.},
+	urldate = {2018-08-21},
+	booktitle = {Proceedings of the 6th {International} {Conference} on the {Internet} of {Things}},
+	publisher = {ACM},
+	author = {Perera, Charith and McCormick, Ciaran and Bandara, Arosha K. and Price, Blaine A. and Nuseibeh, Bashar},
+	year = {2016},
+	keywords = {Internet of Things, privacy, Software Engineering},
+	pages = {83--92},
+	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\IG6AG4YN\\Perera et al. - 2016 - Privacy-by-Design Framework for Assessing Internet.pdf:application/pdf}
+}
+
+@inproceedings{ur_intruders_2014,
+	address = {New York, NY, USA},
+	series = {{UbiComp} '14},
+	title = {Intruders {Versus} {Intrusiveness}: {Teens}' and {Parents}' {Perspectives} on {Home}-entryway {Surveillance}},
+	isbn = {978-1-4503-2968-2},
+	shorttitle = {Intruders {Versus} {Intrusiveness}},
+	url = {http://doi.acm.org/10.1145/2632048.2632107},
+	doi = {10.1145/2632048.2632107},
+	abstract = {We investigated how household deployment of Internet-connected locks and security cameras could impact teenagers' privacy. In interviews with 13 teenagers and 11 parents, we investigated reactions to audit logs of family members' comings and goings. All parents wanted audit logs with photographs, whereas most teenagers preferred text-only logs or no logs at all. We unpack these attitudes by examining participants' parenting philosophies, concerns, and current monitoring practices. In a follow-up online study, 19 parents configured an Internet-connected lock and camera system they thought might be deployed in their home. All 19 participants chose to monitor their children either through unrestricted access to logs or through real-time notifications of access. We discuss directions for auditing interfaces that could improve home security without impacting privacy.},
+	urldate = {2018-08-21},
+	booktitle = {Proceedings of the 2014 {ACM} {International} {Joint} {Conference} on {Pervasive} and {Ubiquitous} {Computing}},
+	publisher = {ACM},
+	author = {Ur, Blase and Jung, Jaeyeon and Schechter, Stuart},
+	year = {2014},
+	keywords = {audit mechanisms, domestic technologies, internet of things (IoT), monitoring, parents, privacy, smart homes, teenagers},
+	pages = {129--139},
+	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\EYLG9VTZ\\Ur et al. - 2014 - Intruders Versus Intrusiveness Teens' and Parents.pdf:application/pdf}
+}
+
+@article{jayaraman_privacy_2017,
+	title = {Privacy preserving {Internet} of {Things}: {From} privacy techniques to a blueprint architecture and efficient implementation},
+	volume = {76},
+	issn = {0167-739X},
+	shorttitle = {Privacy preserving {Internet} of {Things}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0167739X17303308},
+	doi = {10.1016/j.future.2017.03.001},
+	abstract = {The Internet of Things (IoT) is the latest web evolution that incorporates billions of devices that are owned by different organisations and people who are deploying and using them for their own purposes. IoT-enabled harnessing of the information that is provided by federations of such IoT devices (which are often referred to as IoT things) provides unprecedented opportunities to solve internet-scale problems that have been too big and too difficult to tackle before. Just like other web-based information systems, IoT must also deal with the plethora of Cyber Security and privacy threats that currently disrupt organisations and can potentially hold the data of entire industries and even countries for ransom. To realise its full potential, IoT must deal effectively with such threats and ensure the security and privacy of the information collected and distilled from IoT devices. However, IoT presents several unique challenges that make the application of existing security and privacy techniques difficult. This is because IoT solutions encompass a variety of security and privacy solutions for protecting such IoT data on the move and in store at the device layer, the IoT infrastructure/platform layer, and the IoT application layer. Therefore, ensuring end-to-end privacy across these three IoT layers is a grand challenge in IoT. In this paper, we tackle the IoT privacy preservation problem. In particular, we propose innovative techniques for privacy preservation of IoT data, introduce a privacy preserving IoT Architecture, and also describe the implementation of an efficient proof of concept system that utilises all these to ensure that IoT data remains private. The proposed privacy preservation techniques utilise multiple IoT cloud data stores to protect the privacy of data collected from IoT. The proposed privacy preserving IoT Architecture and proof of concept implementation are based on extensions of OpenIoT - a widely used open source platform for IoT application development. Experimental evaluations are also provided to validate the efficiency and performance outcomes of the proposed privacy preserving techniques and architecture.},
+	urldate = {2018-08-21},
+	journal = {Future Generation Computer Systems},
+	author = {Jayaraman, Prem Prakash and Yang, Xuechao and Yavari, Ali and Georgakopoulos, Dimitrios and Yi, Xun},
+	month = nov,
+	year = {2017},
+	keywords = {Internet of Things, IoT privacy and security, Secure IoT platform},
+	pages = {540--549},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\4TG6CZJ8\\Jayaraman et al. - 2017 - Privacy preserving Internet of Things From privac.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\parit\\Zotero\\storage\\MC35H7GV\\S0167739X17303308.html:text/html}
+}
+
+@inproceedings{williams_perfect_2016,
+	title = {The {Perfect} {Storm}: {The} {Privacy} {Paradox} and the {Internet}-of-{Things}},
+	shorttitle = {The {Perfect} {Storm}},
+	doi = {10.1109/ARES.2016.25},
+	abstract = {Privacy is a concept found throughout human history and opinion polls suggest that the public value this principle. However, while many individuals claim to care about privacy, they are often perceived to express behaviour to the contrary. This phenomenon is known as the Privacy Paradox and its existence has been validated through numerous psychological, economic and computer science studies. Several contributory factors have been suggested including user interface design, risk salience, social norms and default configurations. We posit that the further proliferation of the Internet-of-Things (IoT) will aggravate many of these factors, posing even greater risks to individuals' privacy. This paper explores the evolution of both the paradox and the IoT, discusses how privacy risk might alter over the coming years, and suggests further research required to address a reasonable balance. We believe both technological and socio-technical measures are necessary to ensure privacy is protected in a world of ubiquitous technology.},
+	booktitle = {2016 11th {International} {Conference} on {Availability}, {Reliability} and {Security} ({ARES})},
+	author = {Williams, M. and Nurse, J. R. C. and Creese, S.},
 	month = aug,
-	year = {2018}
+	year = {2016},
+	keywords = {computer science, contributory factors, data privacy, default configurations, economic science, human history, Internet of Things, Internet-of-Things, Online privacy, opinion polls, perfect storm, Privacy by design, privacy paradox, Privacy paradox, psychological science, risk salience, social norms, Socio-technical, socio-technical measures, ubiquitous computing, ubiquitous technology, user interface design},
+	pages = {644--652},
+	file = {IEEE Xplore Abstract Record:C\:\\Users\\parit\\Zotero\\storage\\5MKNICFP\\7784629.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\2Z8KQBU2\\Williams et al. - 2016 - The Perfect Storm The Privacy Paradox and the Int.pdf:application/pdf}
 }
 
-@inproceedings{bahirat2018data,
-  title={A Data-Driven Approach to Developing IoT Privacy-Setting Interfaces},
-  author={Bahirat, Paritosh and He, Yangyang and Menon, Abhilash and Knijnenburg, Bart},
-  booktitle={23rd International Conference on Intelligent User Interfaces},
-  pages={165--176},
-  year={2018},
-  organization={ACM}
+@inproceedings{feth_user-centered_2017,
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {A {User}-{Centered} {Model} for {Usable} {Security} and {Privacy}},
+	isbn = {978-3-319-58460-7},
+	abstract = {Security, privacy and usability are vital quality attributes of IT systems and services. Users and legal authorities demand that systems are secure and preserve privacy. At the same time, security and privacy mechanisms should not complicate workflows and must be transparent for the user. In order to master this challenge, a close involvement of the users is necessary—both at development and at run-time. In this paper, we present a user-centered model for usable security and privacy that is aligned with user-centered design guidelines [34] and the Human-Centered Design process [28]. Based on this model, we present an initial method for the design of usable security systems. Through active involvement of the user, the model and the method are meant to help developers to identify and solve shortcomings of their security and privacy mechanisms. We motivate our work and present our results based on an Internet of Things/smart home scenario. Due to the amount of private data and strong data protection laws, both usability and privacy are of major importance in this domain. However, our model and method are not limited to the smart home domain, but can be applied whenever usable security and privacy are of particular interest for a system under development.},
+	language = {en},
+	booktitle = {Human {Aspects} of {Information} {Security}, {Privacy} and {Trust}},
+	publisher = {Springer International Publishing},
+	author = {Feth, Denis and Maier, Andreas and Polst, Svenja},
+	editor = {Tryfonas, Theo},
+	year = {2017},
+	keywords = {Continuous improvement, Privacy, Security, Security modelling, Usability, User-centered design},
+	pages = {74--89},
+	file = {Springer Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\C7B25BC8\\Feth et al. - 2017 - A User-Centered Model for Usable Security and Priv.pdf:application/pdf}
+}
+@book{witten2016data,
+	title={Data Mining: Practical machine learning tools and techniques},
+	author={Witten, Ian H and Frank, Eibe and Hall, Mark A and Pal, Christopher J},
+	year={2016},
+	publisher={Morgan Kaufmann}
 }
 
+@inproceedings{bahirat_scenario_2018,
+	address = {Tokyo, Japan},
+	series = {{IUI}'18},
+	title = {Scenario {Context} {V}/s {Framing} and {Defaults} in {Managing} {Privacy} in {Household} {IoT}},
+	isbn = {978-1-4503-5571-1},
+	url = {http://doi.acm.org/10.1145/3180308.3180372},
+	doi = {10.1145/3180308.3180372},
+	abstract = {The Internet of Things provides household device users with an ability to connect and manage numerous devices over a common platform. However, the sheer number of possible privacy settings creates issues such as choice overload. This article outlines a data-driven approach to understand how users make privacy decisions in household IoT scenarios. We demonstrate that users are not just influenced by the specifics of the IoT scenario, but also by aspects immaterial to the decision, such as the default setting and its framing.},
+	urldate = {2018-05-04},
+	booktitle = {Proceedings of the 23rd {International} {Conference} on {Intelligent} {User} {Interfaces} {Companion}},
+	publisher = {ACM},
+	author = {Bahirat, Paritosh and Sun, Qizhang and Knijnenburg, Bart P.},
+	year = {2018},
+	keywords = {Data-Driven Design, Internet of Things, Privacy},
+	pages = {63:1--63:2},
+	file = {ACM Full Text PDF:C\:\\Users\\parit\\Zotero\\storage\\IWGJ8XZL\\Bahirat et al. - 2018 - Scenario Context Vs Framing and Defaults in Manag.pdf:application/pdf}
+}
+
+@Article{Holte1993,
+	author="Holte, Robert C.",
+	title="Very Simple Classification Rules Perform Well on Most Commonly Used Datasets",
+	journal="Machine Learning",
+	year="1993",
+	month="Apr",
+	day="01",
+	volume="11",
+	number="1",
+	pages="63--90",
+	abstract="This article reports an empirical investigation of the accuracy of rules that classify examples on the basis of a single attribute. On most datasets studied, the best of these very simple rules is as accurate as the rules induced by the majority of machine learning systems. The article explores the implications of this finding for machine learning research and applications.",
+	issn="1573-0565",
+	doi="10.1023/A:1022631118932",
+	url="https://doi.org/10.1023/A:1022631118932"
+}
+
+
+
+@article{knijnenburg2016taking,
+  title={Taking Control of Household IoT Device Privacy},
+  author={Knijnenburg, Bart P and Kobsa, Alfred},
+  series={CCC Sociotechnical Cybersecurity Workshop},
+  location={La Jolla, CA, USA},
+  Institution={The Computing Community Consortium},
+  year={2016},
+}
+
+@inproceedings{Pejovic2014,
+	author = {Pejovic, Veljko and Musolesi, Mirco},
+	title = {InterruptMe: Designing Intelligent Prompting Mechanisms for Pervasive Applications},
+	booktitle = {Proceedings of the 2014 ACM International Joint Conference on Pervasive and Ubiquitous Computing},
+	series = {UbiComp '14},
+	year = {2014},
+	isbn = {978-1-4503-2968-2},
+	location = {Seattle, Washington},
+	pages = {897--908},
+	numpages = {12},
+	url = {http://doi.acm.org/10.1145/2632048.2632062},
+	doi = {10.1145/2632048.2632062},
+	acmid = {2632062},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {context-aware computing, interruptibility, machine learning, mobile sensing},
+} 
+
+@inproceedings{Tsai2009,
+	author = {Tsai, Janice Y. and Kelley, Patrick and Drielsma, Paul and Cranor, Lorrie Faith and Hong, Jason and Sadeh, Norman},
+	title = {Who's Viewed You?: The Impact of Feedback in a Mobile Location-sharing Application},
+	booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+	series = {CHI '09},
+	year = {2009},
+	isbn = {978-1-60558-246-7},
+	location = {Boston, MA, USA},
+	pages = {2003--2012},
+	numpages = {10},
+	url = {http://doi.acm.org/10.1145/1518701.1519005},
+	doi = {10.1145/1518701.1519005},
+	acmid = {1519005},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {context-awareness, information disclosure, mobile location sharing technology, mobile social, privacy},
+}
+
+@inproceedings{knijnenburg2013,
+	address = {Paris, France},
+	title = {Preference-based location sharing: are more privacy options really better?},
+	isbn = {978-1-4503-1899-0},
+	shorttitle = {Preference-based location sharing},
+	url = {http://doi.acm.org/10.1145/2470654.2481369},
+	doi = {10.1145/2470654.2481369},
+	urldate = {2013-05-11},
+	booktitle = {Proceedings of the {SIGCHI} {Conference} on {Human} {Factors} in {Computing} {Systems}},
+	publisher = {ACM},
+	author = {Knijnenburg, Bart P. and Kobsa, Alfred and Jin, Hongxia},
+	year = {2013},
+	keywords = {information disclosure, location-sharing services, Privacy calculus, decision making},
+	pages = {2667--2676}
+}
+
+@inproceedings{Hudson1996,
+	author = {Hudson, Scott E. and Smith, Ian},
+	title = {Techniques for Addressing Fundamental Privacy and Disruption Tradeoffs in Awareness Support Systems},
+	booktitle = {Proceedings of the 1996 ACM Conference on Computer Supported Cooperative Work},
+	series = {CSCW '96},
+	year = {1996},
+	isbn = {0-89791-765-0},
+	location = {Boston, Massachusetts, USA},
+	pages = {248--257},
+	numpages = {10},
+	url = {http://doi.acm.org/10.1145/240080.240295},
+	doi = {10.1145/240080.240295},
+	acmid = {240295},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {audio, awareness support, distributed work groups, media spaces, privacy, video, visualization},
+}
+
+@inproceedings{Patil2015,
+	author = {Patil, Sameer and Hoyle, Roberto and Schlegel, Roman and Kapadia, Apu and Lee, Adam J.},
+	title = {Interrupt Now or Inform Later?: Comparing Immediate and Delayed Privacy Feedback},
+	booktitle = {Proceedings of the 33rd Annual ACM Conference on Human Factors in Computing Systems},
+	series = {CHI '15},
+	year = {2015},
+	isbn = {978-1-4503-3145-6},
+	location = {Seoul, Republic of Korea},
+	pages = {1415--1418},
+	numpages = {4},
+	url = {http://doi.acm.org/10.1145/2702123.2702165},
+	doi = {10.1145/2702123.2702165},
+	acmid = {2702165},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {esm, experience sampling method, feedback, location sharing, privacy},
+} 
+
+@misc{pricewaterhousecoopers_smart_nodate,
+    author = {PriceWaterhouseCooper US},
+	title = {Smart home, seamless life: {Unlocking} a culture of convenience},
+	url = {https://www.pwc.com/us/en/advisory-services/publications/consumer-intelligence-series/smarthome.html},
+	language = {en\_us},
+    note = "[Online; accessed 27-Jan-2018]"
+}
+
+@article{nissenbaum_privacy_2004,
+	title = {Privacy as {Contextual} {Integrity} {Symposium} - {Technology}, {Values}, and the {Justice} {System}},
+	volume = {79},
+	language = {eng},
+	journal = {Washington Law Review},
+	author = {Nissenbaum, Helen},
+	year = {2004},
+	pages = {119--158},
+	
+}
 @phdthesis{knijnenburg2015user,
 	address = {Irvine, CA},
 	type = {Ph.{D}. {Thesis}},
@@ -136,11 +417,11 @@
 }
 
 @inproceedings{acquisti2006imagined,
-	title={Imagined communities: Awareness, information sharing, and privacy on the Facebook},
-	author={Acquisti, Alessandro and Gross, Ralph},
-	booktitle={International workshop on privacy enhancing technologies},
-	pages={36--58},
-	year={2006}
+  title={Imagined communities: Awareness, information sharing, and privacy on the Facebook},
+  author={Acquisti, Alessandro and Gross, Ralph},
+  booktitle={International workshop on privacy enhancing technologies},
+  pages={36--58},
+  year={2006}
 }
 
 @misc{Amazon,
@@ -268,19 +549,19 @@
 }
 
 @inproceedings{madejski2012study,
-	title={A study of privacy settings errors in an online social network},
-	author={Madejski, Michelle and Johnson, Maritza and Bellovin, Steven M},
-	booktitle={IEEE International Conference on Pervasive Computing and Communications Workshops},
-	pages={340--345},
-	year={2012},
+  title={A study of privacy settings errors in an online social network},
+  author={Madejski, Michelle and Johnson, Maritza and Bellovin, Steven M},
+  booktitle={IEEE International Conference on Pervasive Computing and Communications Workshops},
+  pages={340--345},
+  year={2012},
 }
 
 @inproceedings{olson2005study,
-	title={A study of preferences for sharing and privacy},
-	author={Olson, Judith S and Grudin, Jonathan and Horvitz, Eric},
-	booktitle={CHI'05 extended abstracts on Human factors in computing systems},
-	pages={1985--1988},
-	year={2005},
+  title={A study of preferences for sharing and privacy},
+  author={Olson, Judith S and Grudin, Jonathan and Horvitz, Eric},
+  booktitle={CHI'05 extended abstracts on Human factors in computing systems},
+  pages={1985--1988},
+  year={2005},
 }
 
 @article{pallapa2014adaptive,
@@ -302,14 +583,14 @@
 }
 
 @article{sadeh2009understanding,
-	title={Understanding and capturing people’s privacy policies in a mobile social networking application},
-	author={Sadeh, Norman and Hong, Jason and Cranor, Lorrie and Fette, Ian and Kelley, Patrick and Prabaker, Madhu and Rao, Jinghai},
-	journal={Personal and Ubiquitous Computing},
-	volume={13},
-	number={6},
-	pages={401--412},
-	year={2009},
-	publisher={Springer}
+title={Understanding and capturing people's privacy policies in a mobile social networking application},
+author={Sadeh, Norman and Hong, Jason and Cranor, Lorrie and Fette, Ian and Kelley, Patrick and Prabaker, Madhu and Rao, Jinghai},
+journal={Personal and Ubiquitous Computing},
+volume={13},
+number={6},
+pages={401--412},
+year={2009},
+publisher={Springer}
 }
 
 @article{kirsh2013embodied,
@@ -332,13 +613,13 @@
 }
 
 @article{wisniewski2017making,
-	title={Making privacy personal: Profiling social network users to inform privacy education and nudging},
-	author={Wisniewski, Pamela J and Knijnenburg, Bart P and Lipford, Heather Richter},
-	journal={International Journal of Human-Computer Studies},
-	volume={98},
-	pages={95--108},
-	year={2017},
-	publisher={Elsevier}
+  title={Making privacy personal: Profiling social network users to inform privacy education and nudging},
+  author={Wisniewski, Pamela J and Knijnenburg, Bart P and Lipford, Heather Richter},
+  journal={International Journal of Human-Computer Studies},
+  volume={98},
+  pages={95--108},
+  year={2017},
+  publisher={Elsevier}
 }
 
 @article{vineela2016novel,
@@ -353,32 +634,62 @@
 
 
 @article{ajzen1977attitude,
-	title={Attitude-behavior relations: A theoretical analysis and review of empirical research.},
-	author={Ajzen, Icek and Fishbein, Martin},
-	journal={Psychological bulletin},
-	volume={84},
-	number={5},
-	year={1977},
-	publisher={American Psychological Association}
+  title={Attitude-behavior relations: A theoretical analysis and review of empirical research.},
+  author={Ajzen, Icek and Fishbein, Martin},
+  journal={Psychological bulletin},
+  volume={84},
+  number={5},
+  year={1977},
+  publisher={American Psychological Association}
 }
 
 
 @article{baron1986moderator,
-	title={The moderator--mediator variable distinction in social psychological research: Conceptual, strategic, and statistical considerations.},
-	author={Baron, Reuben M and Kenny, David A},
-	journal={Journal of personality and social psychology},
-	volume={51},
-	number={6},
-	pages={1173--1182},
-	year={1986},
-	publisher={American Psychological Association}
+  title={The moderator--mediator variable distinction in social psychological research: Conceptual, strategic, and statistical considerations.},
+  author={Baron, Reuben M and Kenny, David A},
+  journal={Journal of personality and social psychology},
+  volume={51},
+  number={6},
+  pages={1173--1182},
+  year={1986},
+  publisher={American Psychological Association}
 }
 
 
 @inproceedings {197908,
-	author = {Frederic Raber and Alexander De Luca and Moritz Graus},
-	title = {Privacy Wedges: Area-Based Audience Selection for Social Network Posts},
-	booktitle = {Proceedings of the 2016 {Symposium} on {Usable} {Privacy} and {Security}},
-	year = {2016},
-	url = {https://www.usenix.org/conference/soups2016/workshop-program/wpi/presentation/raber},
+author = {Frederic Raber and Alexander De Luca and Moritz Graus},
+title = {Privacy Wedges: Area-Based Audience Selection for Social Network Posts},
+booktitle = {Proceedings of the 2016 {Symposium} on {Usable} {Privacy} and {Security}},
+year = {2016},
+url = {https://www.usenix.org/conference/soups2016/workshop-program/wpi/presentation/raber},
 }
+
+@inproceedings {bahiratiui2018,
+	address = {Toyko, Japan},
+	series = {{IUI} '18},
+	title = {A {Data}-{Driven} {Approach} to {Developing} {IoT} {Privacy}-{Setting} {Interfaces}},
+	isbn = {978-1-4503-4945-1},
+	url = {http://doi.acm.org/10.1145/3172944.3172982},
+	doi = {10.1145/3172944.3172982},
+	urldate = {2018-04-05},
+	booktitle = {23rd {International} {Conference} on {Intelligent} {User} {Interfaces}},
+	publisher = {ACM},
+	author = {Bahirat, Paritosh and He, Yangyang and Menon, Abhilash and Knijnenburg, Bart},
+	year = {2018},
+	keywords = {machine learning, Internet of Things, data-driven design, privacy settings},
+	pages = {165--176}
+}
+
+
+@article{knijnenburg2017,
+	title = {Privacy? {I} {Can}'t {Even}! {Making} a {Case} for {User}-{Tailored} {Privacy}},
+	volume = {15},
+	issn = {1540-7993},
+	shorttitle = {Privacy?},
+	number = {4},
+	journal = {IEEE Security \& Privacy},
+	author = {Knijnenburg, Bart P.},
+	year = {2017},
+	pages = {62--67}
+}
+
