--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -8,8 +8,7 @@ The Internet of Things (IoT) is an outstanding representative of the third wave 
 %These smart devices ranging from personal devices~\cite{bahirat_exploring_2018,he_data_nodate} (e.g., fitness trackers, smart speakers, smart home appliances) to devices deployed in public areas and ``smart cities'' (e.g., smart billboards, RFID trackers, CCTV cameras)~\cite{bahirat2018data,lee_privacy_2017,pappachan_towards_2017}, are intended to collect information directly related to the users, such as fitness/healthy information, or the environment of users, such as users' home. A main feature of these smart devices, is that they are connected to a larger network of devices via local communication protocols and/or the Internet to create powerful new applications that supports our day-to-day activities. 
 
 % The increasing appearance and impact of IoT devices
-As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, a total number of 21 billion IoT devices will be in use by 2020. This means that IoT devices are about to dethrone smartphones as the largest category of connected devices by then. Cisco predicts the global Internet of Things market will be
-\$14.4 trillion by 2022.
+As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, a total number of 21 billion IoT devices will be in use by 2020. This means that IoT devices are about to dethrone smartphones as the largest category of connected devices by then. Cisco predicts the global Internet of Things market will be \$14.4 trillion by 2022.
 IoT is not a new word to normal users nowadays. Samsung's smart-things, Phillips' Hue smart lighting, Google's Nest smart learning thermostat, and ADT smart home security, Smart watches and fitness trackers, such as the Apple, Android and Pebble watches, Fitbit, Garmin, Jawbone, and Misfit bands, are helping us record our steps, heartbeats, and calories burnt. IoT has already established a huge impact in our everyday lives. 
 
 % The rapid acceleration brings both opportunity and problems
