--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -32,7 +32,7 @@
 % Make the document your own -- fill in these values to reflect the type of
 % document you are writing.
 %
-\title{A Data-Driven Approach to Recommending Privacy Preference for IoT systems}
+\title{A Data-Driven Approach to Recommending Privacy Settings for IoT systems}
 \department{School of Computing}
 \documentType{Dissertation Proposal}
 \major{Computer Science}
