--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -1,7 +1,14 @@
 % !TeX root = proposal.tex
 \chapter{Motivation}\label{motivation}\label{chapter:Motivation}
 
-During the last two decades, the computing world is experiencing the third wave of computing revolution, which is similar to the "Cambrian explosion" about 540 million years ago, where a sudden and major diversification of organisms, with a vast number of species suddenly appearing on our plant. Computers has evolved from large black box that equipped with a monitor, keyboard and mouse, to smartphones, tablets, smart watches, fitness trackers, smart agents, and so on.
+During the last two decades, computers have evolved into intricate personal smart devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. By using all kinds of sensors, these connected devices, exchange data with each other, and further interact with our day-to-day activities. For example, a smart fridge would detect that certain groceries are running low, and would trigger a shopping console to order fresh supplies. 
+
+As forecast by Gartner~\cite{van_der_meulen_gartner_nodate}, the total number of 21 billion IoT devices will be in use by 2020. Cisco also predicts the global IoT market will be \$14.4 trillion by 2022. The rapidly accelerating growth of these Internet of Things (IoT) technologies brings a wealth of opportunities as well as risks. Privacy issues are the underlying obstacles to the adoption of social and mobile technologies. Privacy concerns have been identified as an important barrier to the growth of IoT. %It's well known that people are bad at making decisions. 
+This is also true when it comes to the domain of setting privacy for IoT devices. The user interface for setting privacy preference of present IoT device is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is a demand to solve the following, urgent research question: How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?
+
+To solve this problem, we developed a data-driven approach to \emph{recommending} privacy settings for users of various IoT environments. In this paper, I first discuss our existing work on recommending privacy preferences for IoT, and subsequently I discuss my proposed study to evaluate these privacy recommendations. 
+%BELOW THIS CAN POTENTIALLY BE REMOVED
+We have used both statistical analysis and machine learning techniques to analyze how IoT users make decision regarding the privacy settings of their devices. Based on the insights gained from this analysis, we designed an intelligent user interface to reduce the complexity of setting privacy for IoT. For my dissertation, I plan to evaluate the user experience of this new interface.
 
 The Internet of Things (IoT) is an outstanding representative of the third wave of computing. The first wave focused on computation, making the basics of computing work. The second wave centered on networking, connecting all of these computers together in a global network. The third wave, of which we are in the early stags, looks at making computers part of the physical world which we are living in. Computation and communication are being embedded into our everyday electronic devices. These computers can use all kinds of sensors, such as cameras, microphones, GPS, accelerometers, and more, to perceive the physical world. More over, these computers are getting smarter every passing day --- they can now even interact with our day-to-day activities. It is no longer surprising that our refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our car trying to go back home from work. These smart connected devices are revolutionizing our everyday life. 
 
