Updates from ShareLaTeX

--- a/Proposal/introduction.tex
+++ b/Proposal/introduction.tex
@@ -1,9 +1,7 @@
 % !TeX root = proposal.tex
 \chapter{Motivation}\label{motivation}\label{chapter:Motivation}
 
-During the last two decades, the computing world is experiencing the third wave of computing revolution, which is similar to the "Cambrian explosion" about 540 million years ago, where a sudden and major diversification of organisms, with a vast number of species suddenly appearing on our plant. Computers has evolved from large black box that equipped with a monitor, keyboard and mouse, to smartphones, tablets, smart watches, fitness trackers, smart agents, and so on.
-
-The Internet of Things (IoT) is an outstanding representative of the third wave of computing. The first wave focused on computation, making the basics of computing work. The second wave centered on networking, connecting all of these computers together in a global network. The third wave, of which we are in the early stags, looks at making computers part of the physical world which we are living in. Computation and communication are being embedded into our everyday electronic devices. These computers can use all kinds of sensors, such as cameras, microphones, GPS, accelerometers, and more, to perceive the physical world. More over, these computers are getting smarter every passing day --- they can now even interact with our day-to-day activities. It is no longer surprising that our refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our car trying to go back home from work. These smart connected devices are revolutionizing our everyday life. 
+During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of it's surrounding and thier users. These connected devices, exchange data with each other, and further interact with our day-to-day activities. It's no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are revolutionizing our everyday life.
 
 %These smart devices ranging from personal devices~\cite{bahirat_exploring_2018,he_data_nodate} (e.g., fitness trackers, smart speakers, smart home appliances) to devices deployed in public areas and ``smart cities'' (e.g., smart billboards, RFID trackers, CCTV cameras)~\cite{bahirat2018data,lee_privacy_2017,pappachan_towards_2017}, are intended to collect information directly related to the users, such as fitness/healthy information, or the environment of users, such as users' home. A main feature of these smart devices, is that they are connected to a larger network of devices via local communication protocols and/or the Internet to create powerful new applications that supports our day-to-day activities. 
 
